--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 spring.security.strategy=MODE_INHERITABLETHREADLOCAL
-spring.datasource.url=jdbc:mysql://localhost:3306/university_service
+spring.datasource.url=jdbc:mysql://localhost:3306/university_service?allowPublicKeyRetrieval=true
 spring.datasource.username=mahdi
 spring.datasource.password=mahdi1
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 #server.error.whitelabel.enabled=false
 #spring.mvc.view.suffix=.jsp
+server.port=8081
 
